--- a/templates/AddEmp.html
+++ b/templates/AddEmp.html
@@ -24,6 +24,10 @@
 
 		  		Location:<br> <input style="height:25px;font-size:14pt;color:grey;" type="text" name="location"><br><br>
 
+				Payscale:<br> <input style="height:25px;font-size:14pt;color:grey;" type="text" name="payscale"><br><br>
+
+				Hire date:<br> <input style="height:25px;font-size:14pt;color:grey;" type="text" name="hire_date"><br><br>
+
 		  		Image: <input type=file name="emp_image_file" style="height:25px;font-size:14pt;color:grey;"> <br><br>
 
 		  		<button type="submit" style="background: grey; height: 45px; width: 200px; color: white; size: 5; font:oblique;">UPDATE DATABASE</button>
@@ -35,3 +39,4 @@
 	</font>
 </center>
 </html>
+
